# AndroidRpcTest

./: .gitignore  kls_database.db  readme.md
client/: 0.sh  Cargo.toml
client/src/: main.rs
server/: settings.gradle.kts
server/app/: build.gradle.kts
server/app/src/androidTest/java/com/example/androidrpctest/: ExampleInstrumentedTest.kt
server/app/src/main/: AndroidManifest.xml
server/app/src/main/java/com/example/androidrpctest/: KtorRpcServer.kt  MainActivity.kt  NativeRpcServer.kt
server/app/src/main/java/com/example/androidrpctest/ui/theme/: Color.kt  Theme.kt  Type.kt
server/app/src/main/res/values/: strings.xml  themes.xml
server/app/src/main/rust/: Cargo.toml
server/app/src/main/rust/src/: lib.rs
server/app/src/test/java/com/example/androidrpctest/: ExampleUnitTest.kt
server/gradle/: libs.versions.toml
server/gradle/wrapper/: gradle-wrapper.properties
