[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
image = "0.25.2"
reqwest = { version = "0.12.7", default-features = false, features = [
  "blocking",
  "json",
] }
serde = { version = "1.0.209", features = ["derive"] }
serde_bytes = "0.11.15"
serde_json = "1.0.127"
tarpc = { version = "0.34.0", features = ["full"] }
tokio = { version = "1.39.3", features = ["full"] }
